<resources>
    <string name="app_name">Status Saver</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Get Started</string>
    <string name="des_slider_one">Watch your friends WhatsApp status and share it to your status without downloading</string>
    <string name="title">Welcome to WAStatus</string>
    <string name="desc_two">You can move your status to the gallery directly from the app</string>
    <string name="desc_three">Share other contacts status directly to your Whatsapp contacts or you can upload it to your status</string>
    <string name="err_msg_one">Oops ! you have no saved story till</string>
    <string name="err_msg_two">Oops ! you didn\'t seen a single story yet in Whatsapp today </string>
    <string name="title_activity_settings">Settings</string>


    <!-- Example settings for Notifications -->
    <string name="pref_title_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Daily notification</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="key_video_thumbnail_quality">key_video_thumbnail_quality</string>
    <string name="key_select_theme">key_select_theme</string>
    <string name="lding_err">Image Preview Loading Error</string>
    <string name="turn_on">Turn Off Notification</string>
    <string name="turn_onn">Turn On Notification</string>
    <string name="try_dif_theme">Try Different Themes</string>
    <string name="whatsapp_status_saver">Whatsapp Status Saver</string>
    <string name="version">Version</string>
    <string name="copyright">Copyright</string>
    <string name="kosoft_inc_2018">Kosoft Inc, 2018</string>
    <string name="contact_us">Contact us</string>
    <string name="saved_on">Watched on</string>
    <string name="file_provider_authority" translatable="false">com.ko.wastatus.fileprovider</string>
    <string name="msg_from_dev">\"This app used to save your favourite whatsapp status which was posted by your friends. Whatsapp stories are categorized into Images ,Videos and Saved one. This app made for simple and beautiful UI to make every user very comfortable. And most importantly, this app will be ad - free forever. Share the app to your friends and spread your love.\"</string>
    <string name="saved_on_save">Saved on</string>
</resources>
