<PreferenceScreen
    android:key="key_settings"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="key_cat"  android:title="General">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_video_thumbnail_quality"
            android:summary="By turning on this options may affect app performance"
            android:title="Enable high quality image preview" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="Select your theme"
            android:entries="@array/pref_thems_values"
            android:entryValues="@array/pref_thems__en_values"
            android:key="@string/key_select_theme"
            android:summary="Specify your app theme"
            android:title="Themes" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_vibrate"
            android:summary="Turn on vibrate for notifications"
            android:title="Vibrate" />
    </PreferenceCategory>

</PreferenceScreen>